# RLAgpu

./: .gitignore  CMakeLists.txt  README.md
example/C/: RSVD_double.csv  run_me.py
example/C/src/: main.cpp
example/Power_Iteration_C/: 4k.py  CMakeLists.txt  OoC_colSampling.csv  RSVD_double.csv  RSVD_power.csv  ts_powerTest.py
example/Power_Iteration_C/src/: main.cpp
example/RPCA_C/: CMakeLists.txt  run_me.py
example/RPCA_C/src/: main.cpp
example/RPCA_multiGPU/: CMakeLists.txt
example/RPCA_multiGPU/src/: brsvd_multiGPU.cu  main.cpp  rpca_multiGPU.cpp
example/RSVD_C/: CMakeLists.txt  OoC_colSampling.csv  RSVD_double.csv  large.py  square.py
example/RSVD_C/src/: main.cpp
example/rPCA_matlab/: CMakeLists.txt
example/rPCA_matlab/src/: gpuErrorCheck.h  rPCAmexAPI.cpp
example/rPCA_matlab/testing/: demo_iALM.m  inexact_alm_rpca.m  rpca.csv
example/rSVD_matlab/: CMakeLists.txt  OoC_colSampling.csv  OoC_rowSampling.csv  demo_rsvd_gpu.m
example/rSVD_matlab/src/: RSVDmexAPI.cpp
example/rSVD_matlab/testing/: rpca.csv
src/: caqr.cu  math_util_cpu.cpp  rSVDgpu.cpp  rsvd.h  rsvdCublasXt.cpp  rsvdOoC.cpp
src/rpca/: rpca.cpp  rpca.h  rpca_gpu_kernel.cu
